# ESP32-MIDI

./: .gitignore  README.md  platformio.ini
esp-front-egui/: Cargo.toml  GUI.md  img.py  move.py  test.arr
esp-front-egui/src/: build.rs  command.rs  connection.rs  icon.rs  main.rs  resources.rc  utils.rs
esp-midi-front/: Cargo.toml
esp-midi-front/src/: build.rs  cfg_utils.rs  main.rs  resources.rc
esp-midi-front/ui/: air-conditioner_7824253.png:Zone.Identifier  audio-jack_6887114.png:Zone.Identifier  ui.slint
include/: utils.h
platform_io/: ESP.md  platformio.ini
platform_io/include/: utils.h  utils.hpp
platform_io/src/: Config_Controller.cpp  ESP_MIDI_controller.cpp  main.cpp  utils.cpp
src/: main.cpp  utils.cpp
